Fixed stretching of f0x0rz. Whoops.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,6 @@ img.brandImage {
 
 .pagetop {
     padding: 40px 15px;
-    width: 300;
     height: 330;
 }
 
